# nirspy

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
docs/: architecture.md  getting-started.md  index.md  roadmap.md
docs/reference/: blocks.md  cli.md  domain.md  engine.md
docs/tutorials/: first-pipeline.md
examples/pipelines/: basic-preproc.yml  best-practices-block-design.yml  motion-heavy-recording.yml  resting-state-connectivity.yml
getting-started/: index.html
reference/blocks/: index.html
reference/cli/: index.html
reference/domain/: index.html
reference/engine/: index.html
roadmap/: index.html
scripts/: smoke_e1.py
search/: search_index.json
src/nirspy/: __init__.py
src/nirspy/blocks/: __init__.py  analysis.py  epochs.py  export.py  glm.py  load.py  manual_exclude.py  motion.py  preprocessing.py  quality.py  registry.py  report.py  signal_enhancement.py
src/nirspy/blocks/templates/: report.html.j2
src/nirspy/cli/: main.py
src/nirspy/domain/: __init__.py  block.py  cache.py  conditions.py  data_types.py  exceptions.py  execution.py  glm_result.py  pipeline.py  validation.py
src/nirspy/engine/: __init__.py  cache_adapter.py  exceptions.py  mne_adapter.py
src/nirspy/gui/: __init__.py  app.py  layouts.py
src/nirspy/gui/assets/: tutorial.css
src/nirspy/gui/callbacks/: converter_callbacks.py  execution_callbacks.py  io_callbacks.py  param_callbacks.py  pipeline_callbacks.py  runtime_callbacks.py  tutorial_callbacks.py  viz_callbacks.py
src/nirspy/gui/components/: __init__.py  block_card.py  block_catalog.py  condition_config_modal.py  condition_groups_editor.py  condition_selector.py  condition_timeline.py  condition_windows_editor.py  converter_view.py  error_display.py  glm_runtime_dialog.py  glm_topo.py  hrf_plot.py  hrf_runtime_dialog.py  param_editor.py  param_metadata.py  pipeline_view.py  probe_dialog.py  probe_viewer.py  qc_dashboard.py  raw_data_plot.py  run_button.py  runtime_dialog.py  tooltips.py  tutorial.py
src/nirspy/io/: __init__.py  converters.py  montage.py  oxysoft_txt.py  pipeline_runner.py  pipeline_schema.json  yaml_serializer.py
tests/: conftest.py  test_smoke.py
tests/blocks/: conftest.py  test_analysis.py  test_condition_groups.py  test_epochs_extraction.py  test_export.py  test_glm.py  test_manual_exclude.py  test_motion.py  test_preprocessing.py  test_prune_telemetry.py  test_quality.py  test_report.py  test_short_channel.py
tests/cli/: test_run.py
tests/docs/: test_mkdocs_build.py
tests/domain/: test_block.py  test_cache.py  test_conditions.py  test_data_types.py  test_exceptions.py  test_execution.py  test_pipeline.py  test_pipeline_runner.py  test_validation.py
tests/engine/: test_average_epochs_empty.py  test_cache_adapter.py  test_filter_annotations.py  test_filter_bads.py  test_mne_adapter.py  test_mne_adapter_groups.py  test_mne_adapter_motion.py  test_ui_error_messages.py
tests/gui/: test_app_factory.py  test_builder.py  test_condition_groups_editor.py  test_condition_modal_callbacks.py  test_condition_timeline.py  test_condition_windows_editor.py  test_converter_view.py  test_epoch_condition_editor.py  test_error_messages.py  test_execution.py  test_glm_runtime_dialog.py  test_glm_topo.py  test_glm_viz_callbacks.py  test_hrf_plot.py  test_hrf_runtime_dialog.py  test_param_editor_list.py  test_param_editor_metadata.py  test_probe_dialog.py  test_probe_similarity.py  test_runtime_dialog.py  test_security_5a.py  test_smoke.py  test_tutorial.py
tests/integration/: test_global_conditions_e2e.py  test_pipeline_templates.py
tests/io/: test_converters_condnames.py  test_montage.py  test_oxysoft_txt.py  test_pipeline_runner.py  test_yaml_serializer.py
tutorials/first-pipeline/: index.html
