[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nirspy"
version = "0.0.1"
description = "GUI fNIRS-first em Python — builder modular de pipeline sobre MNE-NIRS"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Bruno Furlanetto" }]
keywords = ["fnirs", "nirs", "neuroscience", "mne", "dash", "pipeline"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mne-nirs>=0.7",
    "mne>=1.6",
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.20",
    "diskcache>=5.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "scipy>=1.10",
    "h5py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-dash>=2.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "hatchling>=1.25",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
nirspy = "nirspy.cli.main:main"

[project.urls]
Homepage = "https://github.com/BrunoFurlanetto/nirspy"
Repository = "https://github.com/BrunoFurlanetto/nirspy"
Issues = "https://github.com/BrunoFurlanetto/nirspy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nirspy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["nirspy"]

[[tool.mypy.overrides]]
# mne, mne_nirs and diskcache do not ship py.typed or stubs; suppress import-untyped.
module = ["mne", "mne.*", "mne_nirs", "mne_nirs.*", "diskcache", "diskcache.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# yaml (pyyaml) stubs are in types-PyYAML; listed as dev dependency.
# Suppress until stubs are installed in CI.
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# h5py and scipy do not ship py.typed or complete stubs; suppress import-untyped.
module = ["h5py", "h5py.*", "scipy", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
